Kop narsa qoshdik

--- a/10-dars.html
+++ b/10-dars.html
@@ -6,10 +6,46 @@
   <title>Document</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/10-dars.css">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  
+  <div class="contenier">
+
+      <div class="novigation">
+        <a href="">
+          <img src="img/Logo@1x.png" alt="logo" width="49" height="35"
+          srcset="img/Logo@1x.png 1x,img/Logo@2x.png 2x">
+        </a>
+        <ul class="novigatoin-link">
+
+          <li><a class="link-heder-about" href="#">About</a></li>
+          <li><a class="link-heder"href="#">Help</a></li>
+          <li><a class="link-heder" href="#">Features</a></li>
+          <li><a class="link-heder" href="#">Signup</a></li>
+
+        </ul>
+
+        <a class="link-demo" href="#">Request Demo</a>
+
+      </div> <!--novigation-->
+
+      <div class="second">
+
+      <div class="second-list">
+
+        <h2 class="second-h">Save your data storage here.</h2>
+        <p class="second-p">Data Warehouse is a data storage area that has been tested for security, so you can store your data here safely but not be afraid of being stolen by others</p>
+        <a class="second-link" href="#">Learn More</a>
+
+      </div> <!--second-list-->
+
+      <img class="second" src="img/intro-img@1x.png" alt="intro" width="685" height="268">
+
+    </div><!--second-->
+
+    </div> <!--contenier-->
+
 
 </body>
 </html>
