--- a/10-dars.html
+++ b/10-dars.html
@@ -40,11 +40,25 @@
 
       </div> <!--second-list-->
 
-      <img class="second" src="img/intro-img@1x.png" alt="intro" width="685" height="268">
+      <img class="second" src="img/intro-img@1x.png" alt="intro" width="885" height="468">
 
     </div><!--second-->
 
     </div> <!--contenier-->
+
+    <div class="third">
+
+       <img class="third-img" src="img/third-image@1x.png" alt="list-third" width="477"
+        width="504">
+
+        <div class="third-list">
+
+        <h2 class="third-h">We are a high-level data storage bank</h2>
+        <p class="third-p">The place to store various data that you can access at any time through the internet and where you can carry it. This very flexible storage area has a high level of security. To enter into your own data you must enter the password that you created when you registered in this Data Warehouse.</p>
+
+      </div><!--third-list-->
+
+    </div><!--third-->
 
 
 </body>
