--- a/10-dars.html
+++ b/10-dars.html
@@ -48,8 +48,8 @@
 
     <div class="third">
 
-       <img class="third-img" src="img/third-image@1x.png" alt="list-third" width="477"
-        width="504">
+       <img class="third-img" src="img/third-image@1x.png" alt="list-third" width="477"  width="504">
+
 
         <div class="third-list">
 
@@ -60,7 +60,68 @@
 
     </div><!--third-->
 
-    <div></div>
+    <div class="fourth">
+
+      <h2 class="fourth-h">Features</h2>
+      <p class="fourth-p">Some of the features and advantages that we provide for those of you who store data in this Data Warehouse.</p>
+
+      <ul class="fourth-list">
+
+        <li class="fourth-list-type">
+
+          <img src="img/image3 1@2x-1.png" alt="image3" width="232" height="211"
+          srcset="img/image3 1@2x-1.png 1x img/image3 1@2x.png 2x">
+
+          <div class="fourth-div">
+            <h3>Search Data</h3>
+            <p> Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+          </div>
+
+        </li>
+
+        <li class="fourth-list-type">
+
+          <img src="img/image4@1x.png" alt="image3" width="232" height="211"
+          srcset="img/image4@1x.png 1x img/image4@2x.png 2x">
+
+          <div class="fourth-div">
+            <h3>24 Hours Access</h3>
+            <p> Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.</p>
+            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+          </div>
+
+        </li>
+
+        <li class="fourth-list-type">
+
+          <img src="img/image5 1@1x.png" alt="image3" width="245" height="181"
+          srcset="img/image5 1@1x.png 1x img/image5 1@2x.png 2x">
+
+          <div class="fourth-div">
+            <h3>Print Out</h3>
+            <p>Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
+            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+          </div>
+
+        </li>
+
+        <li class="fourth-list-type">
+
+          <img src="img/image6 1@1x.png" alt="image3" width="232" height="211"
+          srcset="img/image6 1@1x.png 1x img/image6 1@2x.png 2x">
+
+          <div class="fourth-div">
+            <h3>Search Data</h3>
+            <p> Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
+            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+          </div>
+
+        </li>
+
+      </ul>
+
+    </div><!--forth-->
 
 
 </body>
