--- a/10-dars.html
+++ b/10-dars.html
@@ -20,7 +20,7 @@
         <ul class="novigatoin-link">
 
           <li><a class="link-heder-about" href="#">About</a></li>
-          <li><a class="link-heder"href="#">Help</a></li>
+          <li><a class="link-heder" href="#">Help</a></li>
           <li><a class="link-heder" href="#">Features</a></li>
           <li><a class="link-heder" href="#">Signup</a></li>
 
@@ -48,7 +48,7 @@
 
     <div class="third">
 
-       <img class="third-img" src="img/third-image@1x.png" alt="list-third" width="477"  width="504">
+       <img class="third-img" src="img/third-image@1x.png" alt="list-third" width="477"  height="504">
 
 
         <div class="third-list">
@@ -69,13 +69,13 @@
 
         <li class="fourth-list-type">
 
-          <img src="img/image3 1@2x-1.png" alt="image3" width="232" height="211"
-          srcset="img/image3 1@2x-1.png 1x img/image3 1@2x.png 2x">
+          <img src="img/image31@2x-1.png" alt="image3" width="232" height="211"
+          srcset="img/image31@2x-1.png 1x,img/image31@2x.png 2x">
 
           <div class="fourth-div">
             <h3>Search Data</h3>
             <p> Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
-            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+            <a href="#">Learn more <img src="img/Group56.png" alt="learn more" width="20" height="14"></a>
           </div>
 
         </li>
@@ -83,38 +83,38 @@
         <li class="fourth-list-type">
 
           <img src="img/image4@1x.png" alt="image3" width="232" height="211"
-          srcset="img/image4@1x.png 1x img/image4@2x.png 2x">
+          srcset="img/image4@1x.png 1x,img/image4@2x.png 2x">
 
           <div class="fourth-div">
             <h3>24 Hours Access</h3>
             <p> Access is given 24 hours a full morning to night and meet again in the morning, giving you comfort when you need data when urgent.</p>
-            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+            <a href="#">Learn more <img src="img/Group56.png" alt="learn more" width="20" height="14"></a>
           </div>
 
         </li>
 
         <li class="fourth-list-type">
 
-          <img src="img/image5 1@1x.png" alt="image3" width="245" height="181"
-          srcset="img/image5 1@1x.png 1x img/image5 1@2x.png 2x">
+          <img src="img/image51@1x.png" alt="image3" width="245" height="181"
+          srcset="img/image51@1x.png 1x,img/image51@2x.png 2x">
 
           <div class="fourth-div">
             <h3>Print Out</h3>
             <p>Data Security is one of our best facilities. Allows for your files to be safer. The file can be secured with a code or password that you created, so only you can open the file.</p>
-            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+            <a href="#">Learn more <img src="img/Group56.png" alt="learn more" width="20" height="14"></a>
           </div>
 
         </li>
 
         <li class="fourth-list-type">
 
-          <img src="img/image6 1@1x.png" alt="image3" width="232" height="211"
-          srcset="img/image6 1@1x.png 1x img/image6 1@2x.png 2x">
+          <img src="img/image61@1x.png" alt="image3" width="232" height="211"
+          srcset="img/image61@1x.png 1x,img/image61@2x.png 2x">
 
           <div class="fourth-div">
             <h3>Search Data</h3>
             <p> Don’t worry if your data is very large, the Data Warehoue provides a search engine, which is useful for making it easier to find data effectively saving time.</p>
-            <a href="#">Learn more <img src="img/Group 56.png" alt="learn more" width="20" height="14"></a>
+            <a href="#">Learn more <img src="img/Group56.png" alt="learn more" width="20" height="14"></a>
           </div>
 
         </li>
