--- a/10-dars.html
+++ b/10-dars.html
@@ -44,7 +44,7 @@
 
     </div><!--second-->
 
-    </div> <!--contenier-->
+
 
     <div class="third">
 
@@ -122,6 +122,66 @@
       </ul>
 
     </div><!--forth-->
+
+    <div class="fivth">
+
+      <div class="fivth-list">
+
+        <h2 class="fifth-h">Testimonials</h2>
+
+        <ul class="testimonials">
+
+          <li class="john-list">
+            <img src="img/Ellipse76@1x.png" alt="John Fang" width="90" height="90"
+            srcset="img/Ellipse76@1x.png 1x,img/Ellipse76@2x.png 2x">
+            <div class="john">
+              <h3>John Fang <span class="john-web">wordfaang.com</span></h3>
+              <!-- <p></p> -->
+              <p>Suspendisse ultrices at diam lectus nullam. Nisl, sagittis viverra enim erat tortor ultricies massa turpis. Arcu pulvinar aenean nam laoreet nulla.</p>
+            </div>
+          </li>
+
+          <li class="jeny-list">
+            <img src="img/jeny@1x.png" alt="Jeny Doe" width="90" height="90"
+            srcset="img/jeny@1x.png 1x,img/jeny@2x.png 2x">
+            <div class="jeny">
+              <h3>Jeny Doe<span class="jeny-web">UX Engineer</span></h3>
+              <!-- <p></p> -->
+              <p>Suspendisse ultrices at diam lectus nullam. Nisl, sagittis viverra enim erat tortor</p>
+            </div>
+          </li>
+
+          <li class="watson-list">
+            <img src="img/watson@1x.png" alt="Watson Doe" width="90" height="90"
+            srcset="img/watson@1x.png 1x,img/watson@2x.png 2x">
+            <div class="watson">
+              <h3>Watson Doe<span class="watson-web">UX Engineer</span></h3>
+              <!-- <p></p> -->
+              <p>Suspendisse ultrices at diam lectus nullam. Nisl, sagittis viverra enim erat tortor</p>
+            </div>
+          </li>
+
+        </ul>
+
+        <ol class="element">
+          <li><button class="button-typy" type="button">.</button></li>
+          <li><button type="button">.</button></li>
+          <li><button type="button">.</button></li>
+          <li><button type="button">.</button></li>
+        </ol>
+
+        <div class="vector">
+          <img src="" alt="">
+          <img src="" alt="">
+        </div>
+
+      </div><!--fivth-list-->
+
+    </div><!--fivth-->
+
+    
+
+  </div> <!--contenier-->
 
 
 </body>
