add-all-list-ideal-finish

--- a/10-dars.html
+++ b/10-dars.html
@@ -13,7 +13,7 @@
   <div class="contenier">
 
       <div class="novigation">
-        <a href="">
+        <a href="#">
           <img src="img/Logo@1x.png" alt="logo" width="49" height="35"
           srcset="img/Logo@1x.png 1x,img/Logo@2x.png 2x">
         </a>
@@ -26,7 +26,9 @@
 
         </ul>
 
-        <a class="link-demo" href="#">Request Demo</a>
+        <a class="link-demo" href="#">Request Demo
+          <img src="img/Group-right.png" alt="demo" width="20" height="14">
+        </a>
 
       </div> <!--novigation-->
 
@@ -168,18 +170,92 @@
           <li><button type="button">.</button></li>
           <li><button type="button">.</button></li>
           <li><button type="button">.</button></li>
+
+          <li>
+            <div class="vector">
+              <img src="img/Group.png" alt="left" width="40" height="14">
+              <img src="img/Group2.png" alt="right" width="20" height="14">
+            </div>
+          </li>
+
         </ol>
 
-        <div class="vector">
-          <img src="" alt="">
-          <img src="" alt="">
-        </div>
+
 
       </div><!--fivth-list-->
 
     </div><!--fivth-->
 
-    
+    <div class="border"></div>
+
+    <div class="sixth">
+
+      <p class="sixth-p">Try for free! <span>Get limited 1 week free try our features!</span></p>
+
+      <a class="sixth-link" href="#">Learn more</a>
+      <a class="sixth-link-second" href="#">Request Demo</a>
+    </div><!--sixth-->
+
+    <div class="footer">
+
+      <div class="footer-first-list">
+        <img src="img/Logo@1x.png" alt="logo" width="49" height="35"
+        srcset="img/Logo@1x.png 1x,img/Logo@2x.png 2x">
+        <p class="name">DataWarehouse</p>
+        <p class="footer-p-one" >Warehouse Society, 234 Bahagia Ave Street PRBW 29281</p>
+        <p class="info">info@warehouse.project 1-232-3434 (Main)</p>
+
+        <div class="coment-list">
+        <p class="number"> © Datawarehouse™, 2020. All rights reserved. Company Registration Number: 21479524.</p>
+        <a class="coment-img" href="#">
+          <img src="img/coment@1x.png" alt="comment" width="60" height="60" srcset="img/coment@1x.png 1x,img/coment@2x.png 2x">
+        </a>
+      </div><!--coment-list-->
+
+      </div><!--footer-first-list-->
+
+      <div class="footer-second-list">
+
+        <ul class="second-list-row">
+          <li class="row-heder">About</li>
+          <li><a class="row-link" href="#">Profile</a></li>
+          <li><a class="row-link" href="#">Features</a></li>
+          <li><a class="row-link" href="#">Careers</a></li>
+          <li><a class="row-link" href="#">DW News</a></li>
+        </ul>
+
+        <ul class="second-list-row">
+          <li class="row-heder">Help</li>
+          <li><a class="row-link" href="#">Support</a></li>
+          <li><a class="row-link" href="#">Sign up</a></li>
+          <li><a class="row-link" href="#"> Guide</a></li>
+          <li><a class="row-link" href="#">Reports Q&A</a></li>
+        </ul>
+
+      </div><!--footer-second-list-->
+
+      <div class="apps">
+
+        <h2 class="apps-h2">Social Media</h2>
+
+        <a class="apps-link" href="#">
+          <img src="img/f@1x.png" alt="feacebook" width="50" height="50"
+          srcset="img/f@1x.png 1x,img/f@2x.png 2x">
+        </a>
+
+        <a class="apps-link" href="#">
+          <img src="img/i@1x.png" alt="instagram" width="50" height="50"
+          srcset="img/i@1x.png 1x,img/i@2x.png 2x">
+        </a>
+
+        <a class="apps-link" href="#">
+          <img src="img/t@1x.png" alt="tiweter" width="50" height="50"
+          srcset="img/t@1x.png 1x,img/t@2x.png 2x">
+        </a>
+
+      </div><!--apps-->
+
+    </div><!--footer-->
 
   </div> <!--contenier-->
 
