--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       </div> <!--second-list-->
 
-      <img class="second" src="img/intro-img@1x.png" alt="intro" width="885" height="468">
+      <!-- <img class="second" src="img/intro-img@1x.png" alt="intro" width="885" height="468"> -->
 
     </div><!--second-->
 
