--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/10-dars.css">
+  <link rel="stylesheet" href="css/index.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Nunito+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
